--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Pokemons database"
-    />
+    <meta name="description" content="Pokemons database" />
     <title>Pokedex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="main.js"></script>
   </body>
 </html>
